tests/invalid/invalid-020.inox
Module Invalid020

Main() :
    var X := 10 shl "abc"
;
